# bug-reproduction-nix-zome-build

./: Cargo.toml
dnas/demo/workdir/: dna.yaml
dnas/demo/zomes/coordinator/posts/: Cargo.toml
dnas/demo/zomes/coordinator/posts/src/: lib.rs
ui/src/demo/posts/: types.ts
