[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.3.2"
hdk = "=0.2.2"
serde = "=1.0.166"

[workspace.dependencies.posts]
path = "dnas/demo/zomes/coordinator/posts"

[workspace.dependencies.posts_integrity]
path = "dnas/demo/zomes/integrity/posts"
